# dledger

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  _headers  components.json  flake.nix  package.json  playwright.config.ts  svelte.config.js  vite.config.js  vitest.config.ts  wrangler.demo.jsonc  wrangler.jsonc
.github/workflows/: ci.yml
crates/dledger-core/: Cargo.toml
crates/dledger-core/src/: bitcoin_addr.rs  bitcoin_derive.rs  bitcoin_privkey.rs  ledger.rs  ledger_file.rs  lib.rs  lots.rs  models.rs  reports.rs  schema.rs  storage.rs  validation.rs
crates/dledger-core/tests/: integration_tests.rs  ledger_file_tests.rs
crates/dsample/: Cargo.toml
crates/dsample/src/: accounts.rs  cli.rs  currencies.rs  distributions.rs  error.rs  lib.rs  main.rs  model.rs  price_sim.rs
crates/dsample/src/formatters/: beancount.rs  hledger.rs  kraken_csv.rs  ledger.rs  mod.rs
crates/dsample/src/generators/: crypto.rs  mixed.rs  mod.rs  personal.rs  tax.rs
crates/dsample/tests/: integration.rs
e2e/: basic.spec.ts
messages/: en.json  fr.json
plugins/blockstream/: Cargo.toml
plugins/blockstream/src/: lib.rs
plugins/cost-basis/: Cargo.toml
plugins/cost-basis/src/: lib.rs
plugins/csv-import/: Cargo.toml
plugins/csv-import/src/: lib.rs
plugins/etherscan/: Cargo.toml
plugins/etherscan/src/: lib.rs
plugins/export-beancount/: Cargo.toml
plugins/export-beancount/src/: lib.rs
plugins/export-hledger/: Cargo.toml
plugins/export-hledger/src/: lib.rs
plugins/kraken/: Cargo.toml
plugins/kraken/src/: lib.rs
plugins/mempool/: Cargo.toml
plugins/mempool/src/: lib.rs
plugins/missing-info/: Cargo.toml
plugins/missing-info/src/: lib.rs
plugins/tax-report-fr/: Cargo.toml
plugins/test-source/: Cargo.toml
project.inlang/: settings.json
samples/: demo.beancount
scripts/: build-demo-db.ts  run-tests.mjs  transpile-plugins.mjs
src/: app.css  app.html  sql-js.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: bitcoin_commands.rs  bitcoin_state.rs  commands.rs  db.rs  dprice_commands.rs  etherscan.rs  lib.rs  main.rs  plugin_commands.rs
src-tauri/src/plugin/: capabilities.rs  host_impl.rs  manager.rs  manifest.rs  mod.rs  rate_limiter.rs  state.rs  storage.rs
src-tauri/tests/: blockstream_tests.rs  cost_basis_tests.rs  csv_import_tests.rs  etherscan_tests.rs  export_beancount_tests.rs  export_hledger_tests.rs  kraken_tests.rs  mempool_tests.rs  missing_info_tests.rs  plugin_tests.rs  tax_report_fr_tests.rs
src-tauri/tests/fixtures/plugins/blockstream/: plugin.toml
src-tauri/tests/fixtures/plugins/cost-basis/: plugin.toml  plugin.wasm
src-tauri/tests/fixtures/plugins/csv-import/: plugin.toml  plugin.wasm
src-tauri/tests/fixtures/plugins/etherscan/: plugin.toml  plugin.wasm
src-tauri/tests/fixtures/plugins/export-beancount/: plugin.toml  plugin.wasm
src-tauri/tests/fixtures/plugins/export-hledger/: plugin.toml  plugin.wasm
src-tauri/tests/fixtures/plugins/kraken/: plugin.toml  plugin.wasm
src-tauri/tests/fixtures/plugins/mempool/: plugin.toml  plugin.wasm
src-tauri/tests/fixtures/plugins/missing-info/: plugin.toml  plugin.wasm
src-tauri/tests/fixtures/plugins/tax-report-fr/: plugin.toml  plugin.wasm
src-tauri/tests/fixtures/plugins/test-http-source/: plugin.toml  plugin.wasm
src-tauri/tests/fixtures/plugins/test-source/: plugin.toml
src/lib/: auto-backfill.test.ts  backend.ts  blockchain-activity.ts  blockchain-registry.ts  browser-etherscan.ts  browser-ledger-file.test.ts  browser-ledger-file.ts  coingecko-ids.ts  coingecko-vs-currencies.ts  currency-context.ts  currency-type.ts  currency-validation.test.ts  currency-validation.ts  demo-backend.ts  demo.ts  dprice-client.test.ts  dprice-client.ts  exchange-rate-historical.ts  exchange-rate-sources.test.ts  exchange-rate-sync.ts  i18n.ts  import-detect.test.ts  import-detect.ts  ledger-format.ts  ledger-include.test.ts  ledger-include.ts  reinterpret.test.ts  reinterpret.ts  resolve-dprice-asset.test.ts  service-test.ts  sql-js-backend.test.ts  sql-js-backend.ts  sync-helpers.ts  task-queue.svelte.ts  task-queue.test.ts  thegraph-token-api.test.ts  thegraph-token-api.ts
src/lib/accounts/: paths.ts  (+5 more)
src/routes/: +error.svelte  +layout.svelte  +layout.ts
src/test/: accounts-defaults.test.ts  beancount-comparison.test.ts  helpers.ts  hledger-comparison.test.ts  import-non-postable.test.ts  ledger-comparison.test.ts  mock-handler-context.ts  setup.ts
wit/: handler.wit  host.wit  source.wit  types.wit
(+588 files in other folders)
