[workspace]
resolver = "2"
members = [
    "crates/dledger-core",
    "src-tauri",
]
exclude = [
    "plugins/test-source",
    "plugins/csv-import",
    "plugins/kraken",
    "plugins/etherscan",
    "plugins/mempool",
    "plugins/cost-basis",
    "plugins/missing-info",
    "plugins/tax-report-fr",
    "plugins/export-beancount",
    "plugins/export-hledger",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
dledger-core = { path = "crates/dledger-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1", features = ["serde-with-str"] }
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
thiserror = "2"
rust_decimal_macros = "1"
