[package]
name = "dledger"
version.workspace = true
edition.workspace = true
description = "dledger desktop application - Tauri backend"

[lib]
name = "dledger_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dledger-core = { workspace = true }
dprice = { workspace = true }
tokio = { version = "1", features = ["rt"] }
tokio-util = "0.7"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
tracing = "0.1"
ureq = { version = "3", features = ["json"] }

[dev-dependencies]
tempfile = "3"
rust_decimal_macros = { workspace = true }
