[package]
name = "dledger-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core ledger engine for dledger - pure Rust, no platform dependencies"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
bitcoin = { version = "0.32", features = ["serde"] }
bip39 = { version = "2", features = ["std"] }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
