[package]
name = "kraken-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"
sha2 = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
